# esp32S3

./: CMakeLists.txt  README.md  sdkconfig
components/BSP/: CMakeLists.txt
components/BSP/ESPTIM/: esptim.c
components/BSP/KEY/: key.c
components/BSP/PWM/: pwm.h
components/BSP/WEATHER/: weather.c  weather.h
components/BSP/WIFI/: simple_wifi_sta.c  wifi_smartconfig.c  wifi_smartconfig.h
main/: main.c
